# PDS

./: README.md  aula_01.ipynb  aula_02.ipynb  aula_03.ipynb  aula_04.ipynb  aula_06.ipynb  aula_07.ipynb  aula_09.ipynb  aula_10.ipynb  aula_11.ipynb  aula_12.ipynb  aula_13.ipynb  pyproject.toml
data/: 123test.npy  123test_noise.npy
pds/: __init__.py  pds.py  system.py
