[tool.poetry]
name = "pds"
version = "0.1.0"
description = ""
authors = ["Vinicius Couto <vinicouto12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
sounddevice = "^0.4.4"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
